[tool.poetry]
name = "ho-pytorch"
version = "1.0.0"
description = "hands-on pytorch"
authors = ["yaaarnmack4 <me@yaaarnmack4.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
torchvision = "^0.12.0"
torchaudio = "^0.11.0"
jupyterlab = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
